# win32-coreaudio-rs

./: Cargo.toml
src/: audio_endpoint_volume.rs  audio_endpoint_volume_callback.rs  audio_session_control.rs  audio_session_enumerator.rs  audio_session_events.rs  audio_session_manager.rs  audio_session_notification.rs  audio_volume_duck_notification.rs  bits.rs  device.rs  device_collection.rs  device_enumerator.rs  lib.rs  notification_client.rs  property_store.rs  simple_audio_volume.rs  string.rs
