[package]
name = "win32-coreaudio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
windows = { version = "0.52.0", features = [
	"implement",
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_System_Com_StructuredStorage",
	"Win32_Devices_FunctionDiscovery",
	"Win32_Devices_Properties",
	"Win32_Storage",
	"Win32_Globalization",
	"Win32_System_Memory",
	"Win32_System_Variant",
] }


[build-dependencies]
windows = "0.52.0"
